# openapi.yaml
@@ -271,6 +271,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/get_bind_user_event:
+        get:
+            tags:
+                - Transaction
+            operationId: Transaction_GetBindUserEvent
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserREventReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/get_box_all:
         get:
             tags:
@@ -875,6 +893,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/p_queue:
+        get:
+            tags:
+                - Transaction
+            operationId: Transaction_PQueue
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserREventReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/remove_liquidity:
         post:
             tags:
@@ -965,6 +1001,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/SetRewardReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/set_user:
+        get:
+            tags:
+                - Transaction
+            operationId: Transaction_SetUser
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserREventReply'
                 default:
                     description: Default error response
                     content:
